--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "mi-log",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "mi-log is a simple logger for nodejs and browser.",
-  "main": "log.js",
+  "main": "mi-log.js",
   "scripts": {
-    "test": "node test.js"
+    "demo": "node demo.js"
   },
-  "keywords": [],
+  "keywords": [
+    "log",
+    "logger",
+    "mi-log",
+    "micuit lib"
+  ],
   "author": "micuit-cuit",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://micuit-cuit.github.io/mi-logSite/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/micuit-cuit/mi-log.git",
+    "directory": "mi-log"
+  }
 }
